--- a/client/main.css
+++ b/client/main.css
@@ -2,3 +2,93 @@
    overflow-y:scroll;
    height:60vh;
  }/* CSS declarations go here */
+
+.navbar{
+   margin-bottom: 0px;
+   /*background-color: #ffffff;
+   border: 0px;*/
+
+ }
+ .nav .navbar-nav .navbar-right{
+   color: #ffffff;
+ }
+ .page-scroll{
+     color: #ffffff;
+ }
+ .navbar-brand{
+   color: #ffffff;
+ }
+ .nav-text{
+   color: #ffffff;
+ }
+
+ @import url(https://fonts.googleapis.com/css?family=Roboto:300);
+
+ .signin-page {
+   width: 360px;
+   padding: 8% 0 0;
+   margin: auto;
+ }
+ .signin-form {
+   position: relative;
+   z-index: 1;
+   background: #FFFFFF;
+   max-width: 360px;
+   margin: 0 auto 100px;
+   padding: 45px;
+   text-align: center;
+   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+ }
+ .signin-form input {
+   font-family: "Roboto", sans-serif;
+   outline: 0;
+   background: #f2f2f2;
+   width: 100%;
+   border: 0;
+   margin: 0 0 15px;
+   padding: 15px;
+   box-sizing: border-box;
+   font-size: 14px;
+ }
+ .signin-form button {
+   font-family: "Roboto", sans-serif;
+   text-transform: uppercase;
+   outline: 0;
+   background: #4CAF50;
+   width: 100%;
+   border: 0;
+   padding: 15px;
+   color: #FFFFFF;
+   font-size: 14px;
+   -webkit-transition: all 0.3 ease;
+   transition: all 0.3 ease;
+   cursor: pointer;
+ }
+ .signin-form button:hover,.form button:active,.form button:focus {
+   background: #43A047;
+ }
+ .signin-form .message-signin{
+   margin: 15px 0 0;
+   color: #b3b3b3;
+   font-size: 12px;
+ }
+ .signin-form .message-signin a {
+   color: #4CAF50;
+   text-decoration: none;
+ }
+ .signin-form .register-form {
+   /*display: none;*/
+ }
+
+  .signin-body {
+    background: #8190FF;
+    background: -webkit-linear-gradient(right, #8190FF, #8190FF);
+    background: -moz-linear-gradient(right, #8190FF, #8190FF);
+    background: -o-linear-gradient(right, #8190FF, #8190FF);
+    background: linear-gradient(to left, #8190FF, #8190FF);
+    font-family: "Roboto", sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    padding-top:10%;
+    padding-bottom: 10%;
+  }
