--- a/client/main.css
+++ b/client/main.css
@@ -1,8 +1,19 @@
+
+ /*@import url(https://fonts.googleapis.com/css?family=Roboto:300);*/
+body{
+  background-color: #ffffff;
+  font-family: "Roboto", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
 .panel-body{
    overflow-y:scroll;
    height:60vh;
  }/* CSS declarations go here */
 
+/*body{
+  background-color: #ffffff;
+}*/
 .navbar{
    margin-bottom: 0px;
    /*background-color: #ffffff;
@@ -21,13 +32,15 @@
  .nav-text{
    color: #ffffff;
  }
-
- @import url(https://fonts.googleapis.com/css?family=Roboto:300);
+.panel-info{
+  border: 0px;
+}
 
  .signin-page {
    width: 360px;
-   padding: 8% 0 0;
+   padding: 0 0 0;
    margin: auto;
+
  }
  .signin-form {
    position: relative;
@@ -81,6 +94,7 @@
  }
 
   .signin-body {
+
     background: #8190FF;
     background: -webkit-linear-gradient(right, #8190FF, #8190FF);
     background: -moz-linear-gradient(right, #8190FF, #8190FF);
@@ -92,8 +106,26 @@
     padding-top:10%;
     padding-bottom: 10%;
   }
-
+/*
   .chat_Page{
     background-color: #8190FF;
     height: 600px;
+  }*/
+
+  .rooms_side{
+    position: absolute;
+  padding-top: 40px;
+  padding-left: 50px;
+  list-style: none;
+  width: 200%;
+  }
+
+  h4{
+    font-size: 15px;
+    /*margin: 20px 0 10px 60px;*/
+    font-weight: 700;
+  }
+  span{
+
+    color: #7F707E;
   }
