--- a/imports/ui/feed.css
+++ b/imports/ui/feed.css
@@ -1,4 +1,6 @@
-
+.panel-default{
+  border: 1px solid #e6ecf0;
+}
 
   /*----_Write a post------*/
 
@@ -37,7 +39,7 @@ width: 100%;
   width: 100%;
 }
 .status-upload {
-background: none repeat scroll 0 0 #f5f5f5;
+background: none repeat scroll 0 0 #ffffff;
 -webkit-border-radius: 4px;
 -moz-border-radius: 4px;
 -ms-border-radius: 4px;
@@ -45,10 +47,14 @@ background: none repeat scroll 0 0 #f5f5f5;
 border-radius: 4px;
 float: left;
 width: 100%;
+
 }
 .status-upload form {
 float: center;
 width: 100%;
+}
+.status-upload form input {
+  height: 50px;
 }
 .status-upload form textarea {
 background: none repeat scroll 0 0 #fff;
@@ -62,7 +68,7 @@ color: #777777;
 float: left;
 font-family: Lato;
 font-size: 14px;
-height: 142px;
+/*height: 142px;*/
 letter-spacing: 0.3px;
 padding: 20px;
 width: 100%;
