--- a/client/main.css
+++ b/client/main.css
@@ -1,15 +1,15 @@
 
  /*@import url(https://fonts.googleapis.com/css?family=Roboto:300);*/
 .navbar-default{
-  background-color: #4ac6fb;
+  background-color: #ffffff;
   border: 0px;
-  color: #ffffff;
+  color: #4ac6fb;
 }
 .navbar-default .navbar-brand {
-  color: #ffffff;
+  color: #4ac6fb;
 }
 .navbar-default .navbar-nav > li > a {
-  color: #ffffff;
+  color: #4ac6fb;
 }
 .row{
   margin-right: 0px;
@@ -18,7 +18,7 @@
 }
 
 body{
-  background-color: #f5f8fa;
+  background-color: #E9EBEE;
   font-family: "Roboto", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -58,6 +58,7 @@ body{
    width: 360px;
    padding: 0 0 0;
    margin: auto;
+   margin-top: 100px;
 
  }
  .signin-form {
@@ -85,7 +86,7 @@ body{
    font-family: "Roboto", sans-serif;
    text-transform: uppercase;
    outline: 0;
-   background: #4CAF50;
+   background: #4ac6fb;
    width: 100%;
    border: 0;
    padding: 15px;
@@ -104,7 +105,7 @@ body{
    font-size: 12px;
  }
  .signin-form .message-signin a {
-   color: #4CAF50;
+   color: #4ac6fb;
    text-decoration: none;
  }
  .signin-form .register-form {
@@ -131,8 +132,8 @@ body{
   }*/
 
   .rooms_side{
-    position: absolute;
-  padding-top: 40px;
+    position: relative;
+  /*padding-top: 40px;*/
   padding-left: 50px;
   list-style: none;
   width: 200%;
