--- a/imports/ui/topics/topicspage.css
+++ b/imports/ui/topics/topicspage.css
@@ -10,8 +10,8 @@
 .features-boxed h2 {
   font-weight:bold;
   /*margin-bottom:40px;*/
-  padding-top:40px;
-  color:inherit;
+  padding-top:10px;
+  color:white;
 }
 
 @media (max-width:767px) {
@@ -28,8 +28,17 @@
   margin:0 auto;
 }
 
-.features-boxed .intro p {
+.features-boxed .intro h1 {
   margin-bottom:0;
+  color: White;
+
+}
+
+.features-boxed .intro h2 {
+  margin-bottom:0;
+  color: white;
+  font-size:20px;
+  font-weight: 500;
 }
 
 .features-boxed .features {
@@ -42,9 +51,11 @@
 
 .features-boxed .item .box {
   text-align:center;
-  padding:30px;
-  background-color:#8190FF;
+  padding:50px;
+  background-color:rgba(255, 255, 255, 0.9);
+
   margin-bottom:30px;
+  border-radius: 3px;
 }
 
 .features-boxed .item .icon {
@@ -59,11 +70,13 @@
   font-size:18px;
   margin-bottom:8px;
   margin-top:0;
-  color:white;
+  color:#476c8e;
 }
 
 .features-boxed .item .description {
   font-size:15px;
   margin-top:15px;
   margin-bottom:20px;
+  color: #476c8e;
+
 }
