--- a/client/main.css
+++ b/client/main.css
@@ -18,8 +18,8 @@
 }
 
 body{
-  background-color: #E9EBEE;
-  font-family: "Roboto", sans-serif;
+  background-color: #52B8E5;
+font-family: 'Open Sans', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
