--- a/imports/ui/topics/topicspage.css
+++ b/imports/ui/topics/topicspage.css
@@ -12,6 +12,8 @@
   /*margin-bottom:40px;*/
   padding-top:10px;
   color:white;
+  font-family: 'Open Sans', sans-serif;
+
 }
 
 @media (max-width:767px) {
@@ -30,15 +32,27 @@
 
 .features-boxed .intro h1 {
   margin-bottom:0;
-  color: White;
+  color: #002c54;
+
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 700;
+  font-size: 60px;
 
 }
 
 .features-boxed .intro h2 {
   margin-bottom:0;
-  color: white;
+  color: #002c54;
   font-size:20px;
-  font-weight: 500;
+  font-weight: 600;
+  line-height: 30px;
+}
+.features-boxed .intro h3 {
+  margin-bottom:0;
+  color: #1d609a;
+  font-size:20px;
+  font-weight: 400;
+  line-height: 30px;
 }
 
 .features-boxed .features {
