--- a/client/main.css
+++ b/client/main.css
@@ -27,6 +27,14 @@ font-family: 'Open Sans', sans-serif;
    overflow-y:scroll;
    height:60vh;
  }/* CSS declarations go here */
+h1,h2,h3,h4 {
+  font-family: "Open Sans"!important;
+
+}
+p {
+  font-family: "Open Sans"!important;
+
+}
 
 /*body{
   background-color: #ffffff;
